添加新的理解
Signed-off-by: 毛巳煜 <eric.mao@lemonit.cn>

--- a/_posts/2023/03/2023-03-10-零散学习整理.md
+++ b/_posts/2023/03/2023-03-10-零散学习整理.md
@@ -35,7 +35,7 @@ categories:
 
 
 
-> 也就是说，我们通常都会使用一个三维的张量，这个张量的维度是有特殊的表示意义的，第一维通常会表示成批次，就是这一个段的张量数据是由几批组成的 第二个就是每一批中有多少数据，最后一维指的是每批数据中的具体内容一共有多少
+> 我们通常都会使用一个三维的张量，是因为张量的维度是有特殊的表示意义的，在RNN这个场景下，第一维通常会表示成批次，就是这一个段的张量数据是由几批组成的 第二个维度就是每一批中有多少数据，最后一维指的是每批数据中的具体内容一共有多少
 
 > 是的，你的理解是正确的。我们通常会使用一个三维的张量来处理序列数据，尤其是在RNN（循环神经网络）中，这个三维张量的维度确实有特殊的表示意义。具体来说：
 
@@ -106,7 +106,7 @@ categories:
 
 
 
-> 那我有一个更简单的理解方法，所就是说神经网络需要这样一个三维的数组的数据格式来进行传播，只不是 张量 是试用于在 GPU上进行计算的，所以我们要使用张量
+> 那我有一个更简单的理解方法，所就是说神经网络需要这样一个三维的数组的数据格式来进行传播，只不过张量是适用于在GPU上进行计算的，所以我们要使用张量
 
 > 你的理解基本正确。确实，神经网络（特别是RNN和其他序列模型）通常需要一个三维数组的数据格式来进行前向传播和反向传播。这个三维数组可以用张量来表示，特别是为了在GPU上进行高效计算。以下是对这个概念的更详细解释：
 >
