--- a/_posts/2024/09/2024-09-24-ollama简介与应用.md
+++ b/_posts/2024/09/2024-09-24-ollama简介与应用.md
@@ -88,6 +88,8 @@ OLLAMA_MODELS=/data/siyu.mao/ollama-svc/models
 ERIC
 ```
 
+也可以使用`systemctl edit ollama.service`命令来添加环境变量
+
 
 
 #### 添加服务自启动脚本
@@ -357,7 +359,7 @@ vicuna:7b    370739dc897b    9.4 GB    100% GPU     Forever
 
 
 
-### 使用API启动模型[官方文档]([ollama/docs/api.md at main · ollama/ollama · GitHub](https://github.com/ollama/ollama/blob/main/docs/api.md))
+### 使用API启动模型[官方文档](https://github.com/ollama/ollama/blob/main/docs/api.md)
 
 ``` bash
 # 查看正在运行的模型
@@ -395,7 +397,7 @@ glm4:9b      5b699761eca5    6.6 GB    100% GPU     4 minutes from now
 
 
 
-#### 聊天请求（流式处理）[官方文档]([ollama/docs/api.md 在 main ·OLLAMA/OLLAMA ·GitHub的](https://github.com/ollama/ollama/blob/main/docs/api.md#chat-request-streaming))
+#### 聊天请求（流式处理）[官方文档](https://github.com/ollama/ollama/blob/main/docs/api.md#chat-request-streaming)
 
 ``` bash
 curl -X POST http://localhost:11434/api/chat \
@@ -466,7 +468,7 @@ curl -X POST http://localhost:11434/api/chat \
 
 
 
-#### 聊天请求（带工具）[官方文档]([ollama/docs/api.md 在 main ·OLLAMA/OLLAMA ·GitHub的](https://github.com/ollama/ollama/blob/main/docs/api.md#chat-request-with-tools))
+#### 聊天请求（带工具）[官方文档](https://github.com/ollama/ollama/blob/main/docs/api.md#chat-request-with-tools)
 
 ``` bash
 curl -X POST http://localhost:11434/api/chat -d '{
@@ -543,7 +545,7 @@ glm4-9b模型暂不支持function功能`{"error":"glm4:9b does not support tools
 #### 停止模型运行
 
 ``` bash
-# 启动模型(流式返回)
+# 停止模型
 curl -X POST http://localhost:11434/api/generate -d '{
   "model": "glm4:9b",
   "keep_alive": 0
@@ -623,7 +625,7 @@ ollama run Qwen2-1.5B-Instruct
 
 
 
-### 列出本地模型[官方文档]([ollama/docs/api.md 在 main ·OLLAMA/OLLAMA ·GitHub的](https://github.com/ollama/ollama/blob/main/docs/api.md#list-local-models))
+### 列出本地模型[官方文档](https://github.com/ollama/ollama/blob/main/docs/api.md#list-local-models)
 
 ``` bash
 curl http://localhost:11434/api/tags
