--- a/_posts/2024/10/2024-10-10-基于OIDC的SSO认证原理.md
+++ b/_posts/2024/10/2024-10-10-基于OIDC的SSO认证原理.md
@@ -41,7 +41,7 @@
 ### 场景分析：
 - **门户服务**（Client）：负责统一登录和管理用户的身份。
 - **ERP 服务**（Resource Server）：处理与企业资源管理相关的数据。
-- **RAG 服务**（Resource Server）：处理与风险评估相关的数据。
+- **RAG 服务**（Resource Server）：处理与企业知识库相关的数据。
 - **门户后端服务**（Resource Server）：门户自己的后台 API，需要获取用户相关的信息。
 
 
