--- a/_posts/2024/10/2024-10-30-(转载)【解决方案】多租户技术架构设计入门.md
+++ b/_posts/2024/10/2024-10-30-(转载)【解决方案】多租户技术架构设计入门.md
@@ -16,7 +16,7 @@
 
 #### **二、隔离模式**
 
-一般来说多租户常见的有3种隔离模式：独立数据库、共享数据但独立数据架构、共享数据库且共享数据架构。
+一般来说多租户常见的有3种隔离模式：**`独立数据库`、共享数据但`独立数据架构`、共享数据库且`共享数据架构`。**
 
 ##### **2.1独立数据库模式**
 
