delete useless content
Signed-off-by: 毛巳煜 <eric.mao@lemonit.cn>

--- a/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
+++ b/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
@@ -135,9 +135,9 @@
                   -------------------------------------
                  |                                     |
                  V                                     V
-               GPU 01                                GPU 02
-       (QWen2.5-0.5B-Instruct)                (QWen2.5-0.5B-Instruct)
-                                              (glm4-9b-chat)
+            GPU 01(VM02)                          GPU 02(VM03)
+       [QWen2.5-0.5B-Instruct]                [QWen2.5-0.5B-Instruct]
+                                              [glm4-9b-chat]
 ```
 
 
@@ -151,21 +151,11 @@ VM03 `10.200.19.4` 安装模型管理的Web服务端
 ### VM01-安装部署`traefik`
 
 ``` shell
-docker pull traefik:v3.2.0
-```
-
-``` shell
-docker pull traefik/whoami:v1.10.3
-
 docker login --username=mao_siyu registry.cn-qingdao.aliyuncs.com
 
-docker tag traefik/whoami:v1.10.3 registry.cn-qingdao.aliyuncs.com/cn-aliyun/whoami:v1.10.3
+docker pull registry.cn-qingdao.aliyuncs.com/cn-aliyun/traefik:v3.2.0
 
-docker push registry.cn-qingdao.aliyuncs.com/cn-aliyun/whoami:v1.10.3
-
-docker pull registry.cn-qingdao.aliyuncs.com/cn-aliyun/whoami:v1.10.3
-
-docker tag registry.cn-qingdao.aliyuncs.com/cn-aliyun/whoami:v1.10.3 traefik/whoami:v1.10.3
+docker tag registry.cn-qingdao.aliyuncs.com/cn-aliyun/traefik:v3.2.0 traefik:v3.2.0
 
 ```
 
