--- a/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
+++ b/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
@@ -156,7 +156,6 @@ docker login --username=mao_siyu registry.cn-qingdao.aliyuncs.com
 docker pull registry.cn-qingdao.aliyuncs.com/cn-aliyun/traefik:v3.2.0
 
 docker tag registry.cn-qingdao.aliyuncs.com/cn-aliyun/traefik:v3.2.0 traefik:v3.2.0
-
 ```
 
 #### docker-compose.yaml
@@ -174,7 +173,8 @@ services:
       - "8080:8080"   # Traefik Web UI 监听 8080 端口
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock  # Traefik 需要访问 Docker socket
-      - ./traefik.yaml:/etc/traefik/traefik.yml    # 通过配置文件加载 Traefik 配置
+      - ./config:/etc/traefik    # 通过配置文件加载 Traefik 配置
+
 #    extra_hosts:
 #      - "service1.example.com:<VM02_IP>"  # 将 service1.example.com 映射到 VM02 的 IP 地址。如：10.200.19.3
 #      - "service2.example.com:<VM03_IP>"  # 将 service2.example.com 映射到 VM03 的 IP 地址。如：10.200.19.4
@@ -183,11 +183,15 @@ services:
 
 ```
 
+``` bash\
+mkdir config/
+```
+
 
 
 ### 测试-基于`主机名`的`定向路由`规则
 
-#### traefik.yaml
+#### config/traefik.yaml
 
 ``` yaml
 # traefik.yaml
@@ -204,7 +208,7 @@ entryPoints:
 providers:
   file:
     filename: /etc/traefik/traefik.yml  # 加载外部配置文件
-    watch: true                         # 允许Traefik自动监视文件更改
+    watch: true                         # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
 
 # Enable health check ping
 ping:
@@ -277,7 +281,7 @@ curl -X 'POST' \
 
 ### 测试-基于请求`模型名`的`动态路由`规则
 
-#### traefik.yaml
+#### config/traefik.yaml
 
 ``` yaml
 api:
@@ -293,7 +297,7 @@ entryPoints:
 providers:
   file:
     filename: /etc/traefik/traefik.yml  # 加载外部配置文件
-    watch: true                         # 允许Traefik自动监视文件更改(暂时测试，不起作用)
+    watch: true                         # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
 
 # Enable health check ping
 ping:
