--- a/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
+++ b/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
@@ -387,3 +387,38 @@ curl -X 'POST' \
 ![](images/traefik_03.png) 
 
 ![](images/traefik_04.png) 
+
+
+
+---
+
+
+
+## 基于OpenAI客户端SDK的用法
+
+``` python
+class ChatServer(object):
+
+    def __init__(self):
+        self.client = OpenAI(base_url=MODEL_API_BASE_URL, api_key=MODEL_API_KEY)
+
+    # 聊天函数
+    def chat(self, question, history, **kwargs):
+        model_name = kwargs.get("model")
+        host_name = "service.example.com"
+        # 1. 拼接对话记录
+        messages = join_prompt(question, history)
+        headers = {
+            "X-Model": model_name,
+            "Host": host_name
+        }
+        # 2. 发起对话
+        response = self.client.chat.completions.create(
+            messages=messages,
+            extra_headers=headers,
+            **kwargs
+        )
+
+        return response
+```
+
