--- a/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
+++ b/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
@@ -207,8 +207,8 @@ entryPoints:
 
 providers:
   file:
-    filename: /etc/traefik/traefik.yml  # 加载外部配置文件
-    watch: true                         # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
+    directory: /etc/traefik   # 加载外部配置文件
+    watch: true               # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
 
 # Enable health check ping
 ping:
@@ -296,8 +296,8 @@ entryPoints:
 
 providers:
   file:
-    filename: /etc/traefik/traefik.yml  # 加载外部配置文件
-    watch: true                         # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
+    directory: /etc/traefik   # 加载外部配置文件
+    watch: true               # 允许Traefik自动监视文件更改(docker映射需要使用文件夹形式`./config:/etc/traefik`，直接指定文件映射将会失效)
 
 # Enable health check ping
 ping:
@@ -306,6 +306,12 @@ ping:
 # Traefik 配置部分，使用 file provider 加载静态路由
 http:
   routers:
+    # 默认路由，匹配所有没有明确指定的请求
+    router-default:
+      rule: "HeaderRegexp(`X-Model`, `^*$`)"  # 捕获所有未匹配的请求
+      service: service-default
+      priority: 1  # 确保默认路由的优先级低于其他特定路由
+
     router-qwen2:
       rule: "Host(`service.example.com`) && Header(`X-Model`, `Qwen2.5-0.5B-Instruct`)"  # 匹配 X-Model 为 Qwen2.5-0.5B-Instruct
       service: service-qwen2  # 指向轮询服务
@@ -315,6 +321,13 @@ http:
       service: service-glm4  # 指向仅 vm03 服务
 
   services:
+    # 默认服务，可以处理所有未匹配路由的请求
+    service-default:
+      loadBalancer:
+        servers:
+          - url: http://default-service-ip:8080  # 默认服务的地址
+        passHostHeader: false  # 不传递原始请求的 Host 头部
+
     # 轮询服务，适用于 Qwen2.5-0.5B-Instruct 模型
     service-qwen2:
       loadBalancer:
