add default routes
Signed-off-by: 毛巳煜 <eric.mao@lemonit.cn>

--- a/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
+++ b/_posts/2024/11/2024-11-05-使用软件负载均衡-动态路由规则，实现模型管理器高可用.md
@@ -194,7 +194,6 @@ mkdir config/
 #### config/traefik.yaml
 
 ``` yaml
-# traefik.yaml
 api:
   insecure: true  # 启用 Web UI，供开发人员使用
 
@@ -217,26 +216,43 @@ ping:
 # Traefik 配置部分，使用 file provider 加载静态路由
 http:
   routers:
-    router-vm02:
-      rule: Host(`service1.example.com`)  # 外部请求的主机名
-      service: service-vm02  # 指向 vm02 上的服务
+    # 默认路由，匹配所有没有明确指定的请求
+    router-default:
+      rule: "HeaderRegexp(`X-Model`, `^*$`)"  # 捕获所有未匹配的请求
+      service: service-default
+      priority: 1  # 确保默认路由的优先级低于其他特定路由
 
-    router-vm03:
-      rule: Host(`service2.example.com`)
-      service: service-vm03
+    router-qwen2:
+      rule: "Header(`X-Model`, `Qwen2.5-0.5B-Instruct`)"  # 匹配 X-Model 为 Qwen2.5-0.5B-Instruct
+      service: service-qwen2  # 指向轮询服务
+
+    router-glm4:
+      rule: "Header(`X-Model`, `glm4-9b-chat`)"  # 匹配 X-Model 为 glm4-9b-chat
+      service: service-glm4  # 指向仅 vm03 服务
 
   services:
-    service-vm02:
+    # 默认服务，可以处理所有未匹配路由的请求
+    service-default:
       loadBalancer:
         servers:
-#          - url: http://<VM02_IP>:8080  # 指向 vm02 上的服务（使用 IP 地址）如：10.200.19.3
-          - url: http://10.200.19.3:8080
+          - url: http://10.200.19.3:8080  # 默认服务的地址
+        passHostHeader: false  # 不传递原始请求的 Host 头部
 
-    service-vm03:
+    # 轮询服务，适用于 Qwen2.5-0.5B-Instruct 模型
+    service-qwen2:
       loadBalancer:
         servers:
-#          - url: http://<VM03_IP>:8080  # 指向 vm03 上的服务（使用 IP 地址）如：10.200.19.4
-          - url: http://10.200.19.4:8080
+          - url: http://10.200.19.3:8080  # 指向 vm02 上的服务
+          - url: http://10.200.19.4:8080  # 指向 vm03 上的服务
+        passHostHeader: false  # 不传递原始请求的 Host 头部
+
+    # 仅路由到 vm03，适用于 glm4-9b-chat 模型
+    service-glm4:
+      loadBalancer:
+        servers:
+          - url: http://10.200.19.4:8080  # 只指向 vm03 上的服务
+        passHostHeader: false  # 不传递原始请求的 Host 头部
+
 
 ```
 
