--- a/_posts/2025/04/2025-04-27-Traefik-插件开发.md
+++ b/_posts/2025/04/2025-04-27-Traefik-插件开发.md
@@ -499,6 +499,8 @@ class TokenStat(Base):
     tokens_per_second = Column(Float)
     timestamp = Column(String)
     path = Column(String)
+    model = Column(String)
+    ip_address = Column(String)
     request_body = Column(Text)
     response_body = Column(Text)
 
@@ -545,6 +547,9 @@ from sqlalchemy.orm import Session
 from database import SessionLocal, TokenStat
 from token_utils import count_tokens_from_messages, count_output_tokens
 import json
+from fastapi.responses import PlainTextResponse
+from sqlalchemy import func
+
 
 app = FastAPI()
 
@@ -564,6 +569,8 @@ async def track(request: Request, db: Session = Depends(get_db)):
     elapsed_time = data["elapsed_time"]
     timestamp = data.get("timestamp")
     path = data.get("path")
+    model = data.get("model")
+    client_host = request.client.host
 
     # 尝试从请求中提取 messages
     input_tokens = 0
@@ -594,6 +601,8 @@ async def track(request: Request, db: Session = Depends(get_db)):
         tokens_per_second=tps,
         timestamp=timestamp,
         path=path,
+        model=model,
+        ip_address=client_host,
         request_body=request_body,
         response_body=response_body,
     )
@@ -601,6 +610,40 @@ async def track(request: Request, db: Session = Depends(get_db)):
     db.commit()
 
     return {"status": "ok", "total_tokens": total_tokens, "tps": tps}
+
+
+@app.get("/api/metrics", response_class=PlainTextResponse)
+def get_metrics(offset: int = 0, db: Session = Depends(get_db)):
+    record = db.query(TokenStat).order_by(TokenStat.id.asc()).offset(offset).limit(1).first()
+    if not record:
+        return PlainTextResponse("# No record found", status_code=404)
+    
+    labels = f'model="{record.model}", path="{record.path}", ip="{record.ip_address}"'
+
+    metrics = f"""
+# HELP input_tokens Number of input tokens
+# TYPE input_tokens gauge
+input_tokens{{{labels}}} {record.input_tokens}
+
+# HELP output_tokens Number of output tokens
+# TYPE output_tokens gauge
+output_tokens{{{labels}}} {record.output_tokens}
+
+# HELP total_tokens Total number of tokens
+# TYPE total_tokens gauge
+total_tokens{{{labels}}} {record.total_tokens}
+
+# HELP elapsed_time Request elapsed time in seconds
+# TYPE elapsed_time gauge
+elapsed_time{{{labels}}} {record.elapsed_time}
+
+# HELP tokens_per_second Tokens processed per second
+# TYPE tokens_per_second gauge
+tokens_per_second{{{labels}}} {record.tokens_per_second}
+""".strip()
+
+    return metrics
+
 
 
 # 启动
