--- a/_posts/2025/05/2025-05-23-安装GPUstack.md
+++ b/_posts/2025/05/2025-05-23-安装GPUstack.md
@@ -149,7 +149,7 @@ nvidia-smi | grep "CUDA Version"
 
   - 离线安装 NVIDIA 容器工具包（推荐）
 
-    - [nvidia-docker-ubuntu_libs.tar](files\nvidia-docker-ubuntu_libs.tar) 
+    - [nvidia-docker-ubuntu_libs.tar](http://qiniu.dev-share.top/file/nvidia-docker-ubuntu_libs.tar) 
 
     - ``` bash
   Fri May 16 08:59:23 2025
