--- a/_posts/2025/09/2025-09-19-麒麟系统部署Docker.md
+++ b/_posts/2025/09/2025-09-19-麒麟系统部署Docker.md
@@ -158,3 +158,202 @@ vim /etc/docker/daemon.json
 systemctl daemon-reload && systemctl restart docker
 ```
 
+
+
+---
+
+
+
+# 安装RAGFlow
+
+解决`RAGFlow`与`Dify`容器管理混乱的问题
+
+```bash
+[root@localhost docker-ragflow]# tree /deploy/ -L 2
+/deploy/
+├── dify-1.8.1
+│   ├── api
+│   ├── ......           省略其它
+│   ├── docker-dify      # 它原来是 docker ，把它改成 docker-dify 容器管理就不会混乱了
+│   ├── images
+│   ├── Makefile
+│   ├── ......           省略其它
+│   ├── README.md
+│   ├── sdks
+│   └── web
+├── dify-1.8.1.zip
+├── ragflow-0.20.5
+│   ├── agent
+│   ├── api
+│   ├── conf
+│   ├── Dockerfile
+│   ├── ......           省略其它
+│   ├── docker-ragflow   # 它原来是 docker ，把它改成 docker-ragflow 容器管理就不会混乱了
+│   ├── example
+│   ├── helm
+│   ├── mcp
+│   ├── rag
+│   ├── README.md
+│   ├── sandbox
+│   ├── sdk
+│   ├── uv.lock
+│   ├── ......           省略其它
+│   └── web
+└── ragflow-0.20.5.zip
+```
+
+
+
+#### CPU does not support
+
+``` bash
+[root@localhost docker-ragflow]# docker-compose logs -f minio mysql
+
+ragflow-mysql  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-mysql  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-mysql  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-mysql  | Fatal glibc error: CPU does not support x86-64-v2
+
+ragflow-minio  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-minio  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-minio  | Fatal glibc error: CPU does not support x86-64-v2
+ragflow-minio  | Fatal glibc error: CPU does not support x86-64-v2
+```
+
+#### GPT分析结果
+
+你遇到的报错：
+
+```
+Fatal glibc error: CPU does not support x86-64-v2
+```
+
+说明你拉下来的 **MinIO** 和 **MySQL** 镜像里编译的 glibc/libc 库，要求 CPU 至少支持 `x86-64-v2` 指令集扩展，而你的环境（Kylin V10 + 较老 CPU）只支持 `x86-64-v1`。
+
+
+
+#### 为什么会这样？
+
+- 2023 年后，很多官方镜像（MySQL 8.0、MinIO、甚至 Python 等）都开始基于 **Debian Bookworm / Ubuntu 22.04** 构建，而这些底层 glibc 版本默认要求 `x86-64-v2`。
+- 你的 CPU 比较老，不支持 AVX/某些 SSE 指令，所以一运行就直接崩溃。
+
+
+
+#### 解决办法
+
+#### 1. **换镜像版本（推荐）**
+
+- 选用较旧的镜像（glibc 仍然基于 `x86-64-v1` 构建），例如：
+
+  - MySQL:
+
+    ```yaml
+    image: mysql:5.7
+    ```
+
+    或者 `mysql:8.0.28` 之前的版本。
+
+  - MinIO:
+
+    ```yaml
+    image: minio/minio:RELEASE.2023-02-09T05-16-53Z
+    ```
+
+    （2023 年 5 月之前的 tag 一般还兼容 `x86-64-v1`）。
+
+你可以去 [Docker Hub](https://hub.docker.com/_/mysql) 和 [MinIO releases](https://github.com/minio/minio/releases) 找到老的 tag。
+
+
+
+#### 2. **自己构建兼容镜像**
+
+如果必须使用新版本，可以基于较老的基础镜像（如 `debian:bullseye` 或 `centos:7`）重新构建：
+
+```dockerfile
+FROM debian:bullseye-slim
+# 装 MinIO 或 MySQL 二进制（兼容 glibc v1）
+```
+
+这样能保证在你这类 CPU 上运行。
+
+
+
+#### 3. **换硬件 / 虚拟化层**
+
+如果未来你需要新版本 MySQL/MinIO，还是需要一颗支持 `x86-64-v2` 的 CPU（大概 2010 年之后的 Intel/AMD 都支持）。
+ 或者你用 **KVM/VMWare/QEMU**，在虚拟机里模拟支持 `x86-64-v2` 的 CPU 也能跑。
+
+
+
+👉 总结：
+ 在你的 Kylin V10 机器上，**直接换镜像版本** 是最省事的解决办法。你可以先尝试把 `mysql` 换成 `5.7` 或 `8.0.28`，把 `minio` 换成 `2023年2月`左右的 release。
+
+要不要我帮你直接挑一个“最稳定的 MySQL + MinIO 版本组合”，给你对应的 `docker-compose.yml`？
+
+
+
+
+
+## 修改`docker-compose-base.yml`
+
+``` yaml
+# ....................
+  mysql:
+    # mysql:5.7 linux/arm64 image is unavailable.
+    #image: mysql:8.0.39
+    image: mysql:5.7                                                               # 改为5.7
+    container_name: ragflow-mysql
+    env_file: .env
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - TZ=${TIMEZONE}
+    command:
+      --max_connections=1000
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_unicode_ci
+      #--default-authentication-plugin=mysql_native_password                       # 5.7 默认就是 mysql_native_password，不需要显式指定
+      #--tls_version="TLSv1.2,TLSv1.3"
+      --tls_version=TLSv1.2                                                        # 去掉 TLSv1.3
+      --init-file /data/application/init.sql
+      #--binlog_expire_logs_seconds=604800
+      --expire_logs_days=7                                                         # 替换 binlog 参数（7 天和 604800 秒差不多）
+    ports:
+      - ${MYSQL_PORT}:3306
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./init.sql:/data/application/init.sql
+    networks:
+      - ragflow
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-p${MYSQL_PASSWORD}"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+    restart: on-failure
+
+  minio:
+    #image: quay.io/minio/minio:RELEASE.2025-06-13T11-33-47Z
+    image: quay.io/minio/minio:RELEASE.2023-02-09T05-16-53Z                       # 改为2023年5月之前的版本
+    container_name: ragflow-minio
+    command: server --console-address ":9001" /data
+    ports:
+      - ${MINIO_PORT}:9000
+      - ${MINIO_CONSOLE_PORT}:9001
+    env_file: .env
+    environment:
+      - MINIO_ROOT_USER=${MINIO_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_PASSWORD}
+      - TZ=${TIMEZONE}
+    volumes:
+      - minio_data:/data
+    networks:
+      - ragflow
+    restart: on-failure
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+# ....................
+```
+
