--- a/_posts/2025/11/2025-11-06-安装Python虚拟环境-uv.md
+++ b/_posts/2025/11/2025-11-06-安装Python虚拟环境-uv.md
@@ -11,11 +11,62 @@ categories:
 
 
 
+## 下载离线包
+
+### Windows
+
+> https://github.com/astral-sh/uv/releases/download/0.9.7/uv-x86_64-pc-windows-msvc.zip
+
+### Linux
+
+> https://github.com/astral-sh/uv/releases/download/0.9.7/uv-x86_64-unknown-linux-gnu.tar.gz
+
 
 
 # 🧭 UV 安装与使用指南
 
-## 安装方法
+
+
+## Windows[官方安装教程](https://docs.astral.sh/uv/getting-started/installation/#__tabbed_1_2)
+
+
+
+### 自定义离线安装脚本
+
+#### install-uv.ps1
+
+```powershell
+$installDir = "D:\uv"
+$zipFile = ".\uv-x86_64-pc-windows-msvc.zip"
+
+# 创建目录并解压
+New-Item -ItemType Directory -Force -Path $installDir | Out-Null
+Expand-Archive -LiteralPath $zipFile -DestinationPath $installDir -Force
+
+# 获取当前用户 PATH
+$oldPath = [Environment]::GetEnvironmentVariable("Path", "User")
+if ($null -eq $oldPath) { $oldPath = "" }
+
+# 判断 PATH 是否包含安装目录
+if ($oldPath -notmatch [Regex]::Escape($installDir)) {
+    $newPath = if ($oldPath -eq "") { $installDir } else { "$oldPath;$installDir" }
+    [Environment]::SetEnvironmentVariable("Path", $newPath, "User")
+    Write-Host "✅ 已将 $installDir 添加到用户 PATH"
+} else {
+    Write-Host "ℹ️ PATH 已包含 $installDir"
+}
+
+# 提示刷新 PATH
+Write-Host ""
+Write-Host "🚀 请重新打开 PowerShell 或 CMD 会话，然后执行："
+Write-Host "   uv --version"
+Write-Host ""
+
+```
+
+
+
+### 安装方法
 
 1. 将以下两个文件放在同一目录：
 
@@ -41,10 +92,112 @@ uv --version
 若看到类似输出：
 
 ```
-uv 0.9.7 (x86_64-pc-windows-msvc)
+uv 0.9.7 (0adb44480 2025-10-30)
 ```
 
 说明安装成功 🎉
+
+
+
+
+
+---
+
+
+
+## Linux [官方安装教程](https://docs.astral.sh/uv/getting-started/installation/#__tabbed_1_1)
+
+### 自定义离线安装脚本
+
+#### install-uv.sh
+
+```bash
+#!/bin/bash
+
+# 安装目录与压缩包路径
+install_dir="$HOME/uv"
+tar_file="./uv-x86_64-unknown-linux-gnu.tar.gz"
+
+# 创建目录并解压
+mkdir -p "$install_dir"
+tar -xzf "$tar_file" -C "$install_dir" --strip-components=1
+
+# 检查 PATH 是否已包含安装目录
+if [[ ":$PATH:" != *":$install_dir:"* ]]; then
+    # 自动判断使用 bash 还是 zsh
+    shell_rc="$HOME/.bashrc"
+    if [ -n "$ZSH_VERSION" ]; then
+        shell_rc="$HOME/.zshrc"
+    elif [ -n "$BASH_VERSION" ] && [ -f "$HOME/.bash_profile" ]; then
+        shell_rc="$HOME/.bash_profile"
+    fi
+
+    # 添加到 PATH
+    echo "" >> "$shell_rc"
+    echo "# UV CLI 安装路径" >> "$shell_rc"
+    echo "export PATH=\"$install_dir:\$PATH\"" >> "$shell_rc"
+    echo "✅ 已将 $install_dir 添加到 PATH（写入 $shell_rc）"
+else
+    echo "ℹ️ PATH 已包含 $install_dir"
+fi
+
+# 设置执行权限
+chmod +x "$install_dir/uv" 2>/dev/null || true
+
+# 提示刷新 PATH
+echo ""
+echo "🚀 请重新打开终端，或执行以下命令立即生效："
+echo "   source ~/.bashrc   # 或 source ~/.zshrc"
+echo ""
+echo "安装完成后可验证："
+echo "   uv --version"
+echo ""
+```
+
+------
+
+### 安装方法
+
+1. 将以下两个文件放在同一目录：
+
+```
+uv-x86_64-unknown-linux-gnu.tar.gz
+install-uv.sh
+```
+
+2. 给予安装脚本执行权限：
+
+```bash
+chmod +x install-uv.sh
+```
+
+3. 在该目录下执行：
+
+```bash
+bash install-uv.sh
+```
+
+4. 安装完成后，**重新打开终端** 并验证安装：
+
+```bash
+uv --version
+```
+
+若看到类似输出：
+
+```
+uv 0.9.7
+```
+
+说明安装成功 🎉
+
+------
+
+是否希望我顺带加上 macOS 版本（保持相同风格）？这样三平台文档就完整了。
+
+
+
+
 
 ---
 
@@ -89,6 +242,23 @@ uv add <依赖名==版本号>
 # 运行
 uv run main.py
 ```
+
+
+
+#### 使用UV切换当前项目的Python版本
+
+``` bash
+# 切换当前项目Python版本为 3.12
+uv venv -p 3.12
+
+# 切换当前项目Python版本为 3.10
+uv venv -p 3.10
+
+```
+
+> 提示：在 `Add Python Interpreter` 的 Virtualenv Environment 选项卡下选择 `Existing`，PyCharm 会自动识别项目中 uv 管理的现有虚拟环境。
+
+
 
 
 
