--- a/_posts/2025/11/2025-11-06-安装Python虚拟环境-uv.md
+++ b/_posts/2025/11/2025-11-06-安装Python虚拟环境-uv.md
@@ -191,10 +191,6 @@ uv 0.9.7
 
 说明安装成功 🎉
 
-------
-
-是否希望我顺带加上 macOS 版本（保持相同风格）？这样三平台文档就完整了。
-
 
 
 
@@ -203,9 +199,11 @@ uv 0.9.7
 
 
 
-## 使用方法
+# 使用方法
 
-#### 在已有项目中使用UV
+
+
+## 在已有项目中使用UV
 
 ``` bash
 # 为当前项目初始化一个虚拟环境，并指䃾Python的版本
@@ -224,7 +222,7 @@ uv add -r .\requirements.txt
 
 
 
-#### 使用UV创建一个新项目
+## 使用UV创建一个新项目
 
 ``` bash
 # 初始化一个项目，并指定Python的版本
@@ -245,7 +243,7 @@ uv run main.py
 
 
 
-#### 使用UV切换当前项目的Python版本
+## 使用UV切换当前项目的Python版本
 
 ``` bash
 # 切换当前项目Python版本为 3.12
@@ -257,6 +255,15 @@ uv venv -p 3.10
 ```
 
 > 提示：在 `Add Python Interpreter` 的 Virtualenv Environment 选项卡下选择 `Existing`，PyCharm 会自动识别项目中 uv 管理的现有虚拟环境。
+
+
+
+## 升级uv自己使用的Python版本
+
+``` bash
+uv python upgrade
+
+```
 
 
 
