--- a/_posts/2025/11/2025-11-21-Casdoor 安装部署.md
+++ b/_posts/2025/11/2025-11-21-Casdoor 安装部署.md
@@ -592,7 +592,7 @@ frontendBaseDir = "../cc_0"
 #### caddy/Caddyfile
 
 ``` json
-casdoor-caddy.com {
+casdoor.dev-share.top {
         tls internal
         reverse_proxy casdoor:8000 {
                 header_up Host {host}
