--- a/_posts/2025/11/2025-11-21-Casdoor 安装部署.md
+++ b/_posts/2025/11/2025-11-21-Casdoor 安装部署.md
@@ -39,7 +39,7 @@ categories:
 
 ### 准备配置文件
 
-#### app.conf
+#### conf/app.conf
 
 ``` ini
 appname = casdoor
@@ -84,7 +84,7 @@ frontendBaseDir = "../cc_0"
 
 
 
-#### init_data.json
+#### conf/init_data.json
 
 ``` json
 {
