Update and rename 2017-11-16-升级node-js.md to 2017-11-16-安装 node-js.md
安装 Node.js

--- a/_posts/2017/11/2017-11-16-安装 node-js.md
+++ b/_posts/2017/11/2017-11-16-安装 node-js.md
@@ -1,5 +1,5 @@
 ---
-title: "升级Node.js"
+title: "安装 Node.js"
 date: "2017-11-16"
 categories: 
   - "node-js"
@@ -14,8 +14,8 @@ categories:
 **[Windows系统下载](https://github.com/coreybutler/nvm-windows/tags)** **[Linux系统下载](https://github.com/nvm-sh/nvm/tags)**
 
 ``` bash
-(base) [cloud@New-test1 (13:41:27) /mnt/data/project/nvm]
-└─$ ll nvm-0.40.1
+root@weixin:~/nvm-0.40.3#
+└─$ ll nvm-0.40.3
 总计 328
 drwxrwxr-x  4 cloud cloud   4096 八月   28 04:44 ./
 drwxrwxr-x  3 cloud cloud   4096 八月   29 11:55 ../
@@ -45,6 +45,47 @@ drwxrwxr-x  3 cloud cloud   4096 八月   28 04:44 .github/
 drwxrwxr-x 11 cloud cloud   4096 八月   28 04:44 test/
 -rw-rw-r--  1 cloud cloud   3676 八月   28 04:44 .travis.yml
 -rwxrwxr-x  1 cloud cloud   2478 八月   28 04:44 update_test_mocks.sh*
+
+```
+
+**安装**
+``` bash
+root@weixin:~/nvm-0.40.3# bash install.sh
+=> Downloading nvm from git to '/root/.nvm'
+=> Cloning into '/root/.nvm'...
+remote: Enumerating objects: 383, done.
+remote: Counting objects: 100% (383/383), done.
+remote: Compressing objects: 100% (326/326), done.
+remote: Total 383 (delta 43), reused 179 (delta 29), pack-reused 0 (from 0)
+Receiving objects: 100% (383/383), 391.80 KiB | 1.02 MiB/s, done.
+Resolving deltas: 100% (43/43), done.
+* (HEAD detached at FETCH_HEAD)
+  master
+=> Compressing and cleaning up git repository
+
+=> Appending nvm source string to /root/.bashrc
+=> Appending bash_completion source string to /root/.bashrc
+=> You currently have modules installed globally with `npm`. These will no
+=> longer be linked to the active version of Node when you install a new node
+=> with `nvm`; and they may (depending on how you construct your `$PATH`)
+=> override the binaries of modules installed with `nvm`:
+
+/usr/lib
+├── corepack@0.32.0
+├── ncm-ng@npm:@ns-private/ncm-ng@2.9.7
+├── nsolid-cli@4.0.2
+└── yarn@1.22.22
+=> If you wish to uninstall them at a later point (or re-install them under your
+=> `nvm` node installs), you can remove them from the system Node as follows:
+
+     $ nvm use system
+     $ npm uninstall -g a_module
+
+=> Close and reopen your terminal to start using nvm or run the following to use it now:
+
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 
 ```
 
@@ -119,38 +160,4 @@ nvm node_mirror https://npmmirror.com/mirrors/node/
 
 - `nvm off`
   - 禁用 Node.js 版本管理。
-```
-
-* * *
-
-* * *
-
-* * *
-
-### 使用 n 模块
-
-> n模块是专门用来管理nodejs的版本，通过它可以升级node的版本，但win系统下不太适用。
-
-#### 安装：
-
-```bash
-npm install n -g
-```
-
-#### 查看n模块版本：
-
-```bash
-n -V
-```
-
-#### 使用 n 模块升级node版本：
-
-```bash
-n 14.17.0 ## 升级到指定版本
-
-n latest ## 升级到最新版本
-
-n lts ## 升级到长期支持版本
-
-n stable ## 升级到最新的稳定版本
 ```
