--- a/_posts/2025/12/2025-12-17-SeekDB 多语言全文索引调研记录.md
+++ b/_posts/2025/12/2025-12-17-SeekDB 多语言全文索引调研记录.md
@@ -1,4 +1,13 @@
-# SeekDB 多语言全文索引调研记录（执行证据版）
+---
+title: "SeekDB 多语言全文索引调研记录"
+date: "2025-12-17"
+categories: 
+  - "databases"
+---
+
+
+
+# SeekDB 多语言全文索引调研记录
 
 ## 1. 测试目标
 
