--- a/_posts/2025/12/2025-12-17-SeekDB 测试代码.md
+++ b/_posts/2025/12/2025-12-17-SeekDB 测试代码.md
@@ -136,22 +136,28 @@ def insert_sample_data():
     sql = """
     INSERT INTO t2 (id, lang, doc, fulltext_doc, embedding)
     VALUES (:id, :lang, :doc, :fulltext_doc, :embedding)
+    ON DUPLICATE KEY UPDATE
+        lang = VALUES(lang),
+        doc = VALUES(doc),
+        fulltext_doc = VALUES(fulltext_doc),
+        embedding = VALUES(embedding)
     """
 
     params = [
-        dict(
-            id=d[0],
-            lang=d[1],
-            doc=d[2],
-            fulltext_doc=d[3],
-            embedding=d[4],
-        )
+        {
+            "id": d[0],
+            "lang": d[1],
+            "doc": d[2],
+            "fulltext_doc": d[3],
+            "embedding": d[4],
+        }
         for d in data
     ]
 
     session.execute(text(sql), params)
     session.commit()
-    print(f"✅ 插入数据 {len(data)} 条")
+    print(f"✅ Upsert 数据 {len(data)} 条")
+
 
 
 # -------------------------------------------------
